--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,33 @@
 
 </head>
 <body>
-    <h1> Bom-vindo! </h1>
-    <h4 align="center"> <font size="15"> Teste1 </font> </h4>
+    <h1> Bem-vindo! </h1>
+    <h4 align="center"> <font size="15"> Teste </font> </h4>
     <p align="right"> <font size="5">  Exemplo </font></p>
+    <p> Lista de carros </p>
+    <ol>
+        <li> Ferrari 288 GTO</li>
+        <li> Porsche 911 Carrega GT3</li>
+        <li> Lamborguini Aventador</li>
+        <li> Jaguar F-Type</li>
+        <li> Aston Martin Vantage GT </li>
+    </ol>
+    <p> Lista de carros (algarismos romanos)</p>
+    <ol type="I">
+        <li> Ferrari 288 GTO</li>
+        <li> Porsche 911 Carrega GT3</li>
+        <li> Lamborguini Aventador</li>
+        <li> Jaguar F-Type</li>
+        <li> Aston Martin Vantage GT </li>
+    </ol>
+
+    <p> Lista de carros (algarismos romanos)</p>
+    <ol type="a">
+        <li> Ferrari 288 GTO</li>
+        <li> Porsche 911 Carrega GT3</li>
+        <li> Lamborguini Aventador</li>
+        <li> Jaguar F-Type</li>
+        <li> Aston Martin Vantage GT </li>
+    </ol>
 </body> 
 </html>
