Listas não ordenadas

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
-
 </head>
 <body>
     <h1> Bem-vindo! </h1>
@@ -28,7 +27,7 @@
         <li> Aston Martin Vantage GT </li>
     </ol>
 
-    <p> Lista de carros (algarismos romanos)</p>
+    <p> Lista de carros (letras)</p>
     <ol type="a">
         <li> Ferrari 288 GTO</li>
         <li> Porsche 911 Carrega GT3</li>
@@ -36,5 +35,21 @@
         <li> Jaguar F-Type</li>
         <li> Aston Martin Vantage GT </li>
     </ol>
+    <p> Lista de carros (não ordenadas)</p>
+    <ul>
+        <li> Ferrari 288 GTO</li>
+        <li> Porsche 911 Carrega GT3</li>
+        <li> Lamborguini Aventador</li>
+        <li> Jaguar F-Type</li>
+        <li> Aston Martin Vantage GT </li>
+    </ul>
+    <p> Lista de carros (não ordenadas)</p>
+    <ul type="square">
+        <li> Ferrari 288 GTO</li>
+        <li> Porsche 911 Carrega GT3</li>
+        <li> Lamborguini Aventador</li>
+        <li> Jaguar F-Type</li>
+        <li> Aston Martin Vantage GT </li>
+    </ul>
 </body> 
 </html>
