--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
+    
 </head>
 <body>
     <h1> Bem-vindo! </h1>
@@ -51,5 +52,39 @@
         <li> Jaguar F-Type</li>
         <li> Aston Martin Vantage GT </li>
     </ul>
+    <p> Lista de carros (não ordenadas)</p>
+    <ul type="circle">
+        <li> Ferrari 288 GTO</li>
+        <li> Porsche 911 Carrega GT3</li>
+        <li> Lamborguini Aventador</li>
+        <li> Jaguar F-Type</li>
+        <li> Aston Martin Vantage GT </li>
+    </ul>
+    <p> Glossário de termos usados de computação</p>
+    <dl>
+        <dd>ANSI</dd>
+        <dt> American National Standard Institute</dt>
+    </dl>
+    <h3> Avaliação de projetos turma A</h3>
+    <table border="l">
+        <tr>
+            <th> Aluno</th>
+            <th> P1</th>
+            <th> P2</th>
+            <th> Média</th>
+        </tr>
+        <tr>
+            <td> Joãozinho</td>
+            <td> 5.5</td>
+            <td> 8.5</td>
+            <td> 7.0</td>
+        </tr>
+        <tr>
+            <td> Maria</td>
+            <td> 9.5</td>
+            <td> 8.5</td>
+            <td> 9.0</td>
+        </tr>
+    </table>
 </body> 
 </html>
