Adicionando linha na tabela

--- a/Index.html
+++ b/Index.html
@@ -85,6 +85,12 @@
             <td> 8.5</td>
             <td> 9.0</td>
         </tr>
+        <tr>
+            <td> Paulo</td>
+            <td> 8.5</td>
+            <td> 8.5</td>
+            <td> 8.5</td>
+        </tr>
     </table>
 </body> 
 </html>
