--- a/noticia.html
+++ b/noticia.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Liderança, economia, política, trabalho e protagonismo negro - Universidade Católica de Brasília</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -45,7 +50,7 @@
         </ul>
         <p> <b>Feira empreendedora</b> – exposição de diferentes produtos de mulheres empreendedoras.</p>
 
-        <h4> 30/-3 – quinta-feira</h4>
+        <h4> 30/03 – quinta-feira</h4> 
         <p> 14h às 16 h </p>
         <p> <b>Tema:</b> Mulheres no mundo do poder e da política</p>
         <h4> Convidadas:</h4>
